--- a/lib/Devel/SizeMe/Graph/static/css/Treemap.css
+++ b/lib/Devel/SizeMe/Graph/static/css/Treemap.css
@@ -1,13 +1,5 @@
-#right-container {
-  display: none;
-}
-
-#center-container {
-  width:800px;
-}
-
 #infovis {
-  width:800px;
+  width:900px;
 }
 
 .node {
@@ -15,6 +7,7 @@
   font-size:9px;
   overflow:hidden;
   cursor:pointer;
+  line-height: normal;
 /*  
   text-shadow:2px 2px 5px #000;
   -o-text-shadow:2px 2px 5px #000;
@@ -33,11 +26,6 @@
     font-size:10px;
     font-family: Menlo, Monaco, "Courier New", monospace;
     padding:7px;
-}
-
-.album {
-    width:100px;
-    margin:3px;
 }
 
 #id-list {
